@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.imdb.com"
        name="IMDb"
-       version="1.0.5"
+       version="1.0.6"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -9,7 +9,7 @@
     <import addon="metadata.common.movieposterdb.com" version="1.0"/>
     <import addon="metadata.common.imdb.com" version="1.0"/>
     <import addon="metadata.common.impa.com" version="1.0"/>
-    <import addon="metadata.common.dtrailer.com" version="1.0"/>
+    <import addon="metadata.common.hdtrailers.net" version="1.0.1"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="en"
