@@ -104,17 +104,23 @@
 			<RegExp conditional="movieposterdb" input="$$1" output="&lt;url function=&quot;GetMoviePosterDBLink&quot;&gt;http://www.movieposterdb.com/browse/search?type=movies&amp;amp;query=\1&lt;/url&gt;" dest="5+">
 				<expression>/title/tt([t0-9]*)/faq</expression>
 			</RegExp>
-			<RegExp conditional="trailer" input="$$1" output="&lt;url function=&quot;GetIMDBTrailer&quot;&gt;http://akas.imdb.com/video/imdb/vi\1/player&lt;/url&gt;" dest="5+">
-				<expression>/vi([0-9]*)/</expression>
+			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet480p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
+				<RegExp input="$$1" output="\1" dest="6">
+					<expression trim="1" noclean="1">&lt;h1&gt;([^&lt;]*)</expression>
+				</RegExp>
+				<expression>480p</expression>
 			</RegExp>
-			<RegExp conditional="dtrailer" input="$$6" output="&lt;chain function=&quot;GetDTrailer&quot;&gt;\1&lt;/chain&gt;" dest="5+"> 
-				<RegExp input="$$4" output="\1-" dest="6"> 
-					<RegExp input="$$1" output="\1" dest="4"> 
-						<expression trim="1" noclean="1">&lt;h1&gt;([^&lt;]*)</expression> 
-					</RegExp> 
-					<expression repeat="yes">([a-zA-Z0-9]+)</expression> 
-				</RegExp> 
-				<expression/>
+			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet720p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
+				<RegExp input="$$1" output="\1" dest="6">
+					<expression trim="1" noclean="1">&lt;h1&gt;([^&lt;]*)</expression>
+				</RegExp>
+				<expression>720p</expression>
+			</RegExp>
+			<RegExp input="$INFO[TrailerQ]" output="&lt;chain function=&quot;GetHDTrailersnet1080p&quot;&gt;$$6&lt;/chain&gt;" dest="5+">
+				<RegExp input="$$1" output="\1" dest="6">
+					<expression trim="1" noclean="1">&lt;h1&gt;([^&lt;]*)</expression>
+				</RegExp>
+				<expression>1080p</expression>
 			</RegExp>
 			<RegExp input="$$2" output="&lt;url cache=&quot;$$2-posters.html&quot; function=&quot;GetIMDBThumbs&quot;&gt;$$3posters&lt;/url&gt;" dest="5+">
 				<expression/>
