@@ -7,7 +7,7 @@
     <string id="30003">IMPAwards inschakelen</string>
     <string id="30004">MoviePosterDB inschakelen</string>
     <string id="30005">IMDb Trailers ophalen</string>
-    <string id="30006">DTrailer.com Trailers ophalen</string>
-    <string id="30007">IMDB poster &amp;amp; Acteur foto formaat</string>
+    <string id="30006">HD-Trailers.net Trailers ophalen</string>
+    <string id="30007">IMDB poster &amp; Acteur foto formaat</string>
 </strings>
 
