@@ -7,7 +7,7 @@
     <string id="30003">Enable posters from IMPAwards</string>
     <string id="30004">Enable posters from MoviePosterDB</string>
     <string id="30005">Enable IMDb trailers</string>
-    <string id="30006">Enable trailers from Dtrailer.com</string>
-    <string id="30007">IMDb Poster &amp;amp; Actor Thumb(s) Size</string>
+    <string id="30006">Enable trailers from HD-Trailers.net</string>
+    <string id="30007">IMDb Poster &amp; Actor Thumb(s) Size</string>
 </strings>
 
