@@ -7,7 +7,7 @@
     <string id="30003">Poszter letöltés az IMPAwards-ról</string>
     <string id="30004">Poszter letöltés a MoviePosterDB-ról</string>
     <string id="30005">IMDb filmelőzetes engedélyezése</string>
-    <string id="30006">Filmelőzetes engedélyezése a Dtrailer.com-ról</string>
-    <string id="30007">IMDb poszter &amp;amp; színész bélyegképek mérete</string>
+    <string id="30006">Filmelőzetes engedélyezése a HD-Trailers.net-ről</string>
+    <string id="30007">IMDb poszter &amp; színész bélyegképek mérete</string>
 </strings>
 
