@@ -7,7 +7,7 @@
     <string id="30003">IMPAwards 에서 포스터 가져오기</string>
     <string id="30004">MoviePosterDB 에서 포스터 가져오기</string>
     <string id="30005">IMDb 예고편 가져오기</string>
-    <string id="30006">Dtrailer.com 에서 예고편 가져오기</string>
-    <string id="30007">IMDb 포스터 &amp;amp; 배우 미리보기 크기</string>
+    <string id="30006">HD-Trailers.net 에서 예고편 가져오기</string>
+    <string id="30007">IMDb 포스터 &amp; 배우 미리보기 크기</string>
 </strings>
 
