@@ -7,7 +7,7 @@
     <string id="30003">Ligar posters de IMPAwards</string>
     <string id="30004">Ligar posters de MoviePosterDB</string>
     <string id="30005">Ligar trailers IMDb</string>
-    <string id="30006">Ligar trailers de Dtrailer.com</string>
-    <string id="30007">Poster IMDb &amp;amp; Tamanho de miniatura(s) do actor</string>
+    <string id="30006">Ligar trailers de HD-Trailers.net</string>
+    <string id="30007">Poster IMDb &amp; Tamanho de miniatura(s) do actor</string>
 </strings>
 
