@@ -5,7 +5,7 @@
     <setting label="30002" type="bool" id="tmdbthumbs" default="true"/>
     <setting label="30003" type="bool" id="impawards" default="false"/>
     <setting label="30004" type="bool" id="movieposterdb" default="false"/>
-    <setting label="30005" type="bool" id="trailer" default="true"/>
-    <setting label="30006" type="bool" id="dtrailer" default="false"/>
+    <setting label="30005" type="bool" id="trailer" default="false"/>
+    <setting label="30006" type="labelenum" values="No|480p|720p|1080p" id="TrailerQ" default="480p"/>
     <setting label="30007" type="labelenum" values="192|256|384|512|1024" id="imdbscale" default="512"/>
 </settings>
