@@ -1,3 +1,7 @@
+[B]1.0.6[/B]
+- replace dtrailer.com with HD-Trailers.net for trailer scraping
+- Fix dupe &amp; in settings strings
+
 [B]1.0.5[/B]
 - return numeric runtime/duration values round 2
 
